Point more aliases to info@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -54,12 +54,20 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
-sponsorship@gnome.org info@gnome.org
+info@gnome.org zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+events@gnome.org info@gnome.org
+hmillion@gnome.org info@gnome.org
+instagram@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
+microblog@gnome.org info@gnome.org
+neil@gnome.org info@gnome.org
+neilm@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
+sponsorship@gnome.org info@gnome.org
 support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
-events@gnome.org info@gnome.org
+
+# Accounting aliases
 bookkeeper@gnome.org rebecca.selin.services@gmail.com
 accounting@gnome.org zana@gnome.org,akuci@gnome.org
 accounts@gnome.org accounting@gnome.org
@@ -108,9 +116,6 @@ marketing-list@gnome.org engagement-list@gnome.org
 # Used for Amazon Affiliates
 amazon@gnome.org zana@gnome.org
 
-# Used for Microblogging
-microblog@gnome.org allanpday@gmail.com, nuritzi@gnome.org, zana@gnome.org
-
 # Used for Twitter (@GNOMELove)
 gnomelove@gnome.org allanpday@gmail.com
 
@@ -118,7 +123,6 @@ gnomelove@gnome.org allanpday@gmail.com
 flattr@gnome.org flattr-list@gnome.org
 
 # GNOME Instagram account
-instagram@gnome.org aday@gnome.org, sri@gnome.org, nuritzi@gnome.org, christopherdavis@gnome.org, sta7chase7@gmail.com, bwyazel@gnome.org
 
 # Twitter (GNOME Photos)
 twitter-photos@gnome.org debarshir@gnome.org, mailumangjain@gmail.com
@@ -145,9 +149,8 @@ gnome-press-contact@gnome.org engagement-private@gnome.org
 gnome-press-team@gnome.org engagement-private@gnome.org
 
 director@gnome.org zana@gnome.org
-trinityhousing@gnome.org director@gnome.org, snmartin@galilea.cl
 tutorials@gnome.org director@gnome.org
-executive@gnome.org hmillion@gnome.org
+executive@gnome.org director@gnome.org
 
 # https://bugzilla.gnome.org/show_bug.cgi?id=796507
 travel-invitations-committee@gnome.org info@gnome.org
@@ -289,10 +292,6 @@ soc-admins@gnome.org teuf@gnome.org, kittykat3756@gmail.com, csoriano@gnome.org,
 
 ### Google Play Developer account - BZ #771981
 android@gnome.org ankitstarski@gmail.com, info@gnome.org
-
-### ED aliases
-neil@gnome.org nmcgovern@gnome.org kprogri@gnome.org
-neilm@gnome.org nmcgovern@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/238
 africa@gnome.org nkemregina@gmail.com, fiberesimaibi@gmail.com
