Add Richard to microblog@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -59,7 +59,7 @@ events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
-microblog@gnome.org info@gnome.org
+microblog@gnome.org info@gnome.org, rlittauer@gnome.org
 neil@gnome.org info@gnome.org
 neilm@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
@@ -100,7 +100,7 @@ jacob@gnome.org jberkman@gnome.org
 kristi@gnome.org kprogri@gnome.org
 misha@gnome.org mishashnurapet@gnome.org
 patrick@gnome.org puiterwijk@gnome.org
-richard@gnome.org rlittauer@gnome.org
+richard@gnome.org rlittauer
 rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
