Allow discourse-incoming-email to impersonate +noreply@discourse.gnome.org

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -407,6 +407,7 @@ dsr@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Discourse over e-mail
 @discourse.gnome.org discourse-incoming-email@staff-mail.gnome.org
+noreply@discourse.gnome.org discourse-incoming-email
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1598
 research@gnome.org interns.usabilitytest@gmail.com
