Add loki and promtail roles, ingest rsyslog logs to promtail (and finally loki) in AWS

--- a/roles/motd/templates/motd.j2
+++ b/roles/motd/templates/motd.j2
@@ -12,7 +12,7 @@ concerning access should be directed to gnome-sysadmin@gnome.org
 
 ===============================================================================
 
-This system is puppet managed!  Local changes may be overwritten!
+This system is Ansible managed!  Local changes may be overwritten!
 
 ===============================================================================
 
