--- a/roles/loki/templates/loki-config.yaml.j2
+++ b/roles/loki/templates/loki-config.yaml.j2
@@ -47,6 +47,7 @@ limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
   allow_structured_metadata: false
+  max_global_streams_per_user: 20000
 
 ruler:
   alertmanager_url: http://localhost:9093
