--- a/roles/cachet-monitor/templates/cachet-monitor.conf.j2
+++ b/roles/cachet-monitor/templates/cachet-monitor.conf.j2
@@ -210,12 +210,13 @@
     {
       "name": "odrs.gnome.org: HTTP response",
       "type": "https",
-      "target": "odrs.gnome.org/1.0/reviews/api/fetch",
+      "target": "odrs.apps.openshift.gnome.org",
       "strict": "true",
       "component_id": 17,
       "interval": 60,
       "timeout": 30,
-      "expected_status_code": 200
+      "expected_status_code": 200,
+      "expected_body": ".*ODRS.*"
     }
   ]
 }
