--- a/roles/cachet-monitor/templates/cachet-monitor.conf.j2
+++ b/roles/cachet-monitor/templates/cachet-monitor.conf.j2
@@ -10,7 +10,7 @@
   "date_format": "Monday, 02-Jan-06 15:04:05 MST",
   "monitors": [
     {
-      "name": "extensions.gnome.org: HTTP response",
+      "name": "extensions.gnome.org",
       "type": "https",
       "target": "extensions.gnome.org",
       "strict": "true",
@@ -21,7 +21,7 @@
       "expected_body": ".*GNOME Shell Extensions.*"
     },
     {
-      "name": "gnome.org: HTTP response",
+      "name": "gnome.org",
       "type": "https",
       "target": "gnome.org",
       "strict": "true",
@@ -32,7 +32,7 @@
       "expected_body": ".*GNOME.*"
     },
     {
-      "name": "l10n.gnome.org: HTTP response",
+      "name": "l10n.gnome.org",
       "type": "https",
       "target": "l10n.gnome.org",
       "strict": "true",
@@ -43,7 +43,7 @@
       "expected_body": ".*Damned Lies.*"
     },
     {
-      "name": "blogs.gnome.org: HTTP response",
+      "name": "blogs.gnome.org",
       "type": "https",
       "target": "blogs.gnome.org",
       "strict": "true",
@@ -54,7 +54,7 @@
       "expected_body": ".*GNOME.*"
     },
     {
-      "name": "cloud.gnome.org: HTTP response",
+      "name": "cloud.gnome.org",
       "type": "https",
       "target": "cloud.gnome.org",
       "strict": "true",
@@ -65,7 +65,7 @@
       "expected_body": ".*a safe home for all your data.*"
     },
     {
-      "name": "pad.gnome.org: HTTP response",
+      "name": "pad.gnome.org",
       "type": "https",
       "target": "pad.gnome.org",
       "strict": "true",
@@ -76,7 +76,7 @@
       "expected_body": ".*HedgeDoc.*"
     },
     {
-      "name": "surveys.gnome.org: HTTP response",
+      "name": "surveys.gnome.org",
       "type": "https",
       "target": "surveys.gnome.org",
       "strict": "true",
@@ -87,7 +87,7 @@
       "expected_body": ".*GNOME Surveys.*"
     },
     {
-      "name": "gitlab.gnome.org: HTTP response",
+      "name": "gitlab.gnome.org",
       "type": "https",
       "target": "gitlab.gnome.org",
       "strict": "true",
@@ -98,7 +98,7 @@
       "expected_body": ".*Explore groups.*"
     },
     {
-      "name": "download.gnome.org: HTTP response",
+      "name": "download.gnome.org",
       "type": "https",
       "target": "download.gnome.org",
       "strict": "true",
@@ -109,7 +109,7 @@
       "expected_body": ".*Index of.*"
     },
     {
-      "name": "events.gnome.org: HTTP response",
+      "name": "events.gnome.org",
       "type": "https",
       "target": "events.gnome.org",
       "strict": "true",
@@ -120,7 +120,7 @@
       "expected_body": ".*GNOME.*"
     },
     {
-      "name": "developer.gnome.org: HTTP response",
+      "name": "developer.gnome.org",
       "type": "https",
       "target": "developer.gnome.org",
       "strict": "true",
@@ -131,7 +131,7 @@
       "expected_body": ".*GNOME.*"
     },
     {
-      "name": "discourse.gnome.org: HTTP response",
+      "name": "discourse.gnome.org",
       "type": "https",
       "target": "discourse.gnome.org",
       "strict": "true",
@@ -142,7 +142,7 @@
       "expected_body": ".*GNOME Discourse.*"
     },
     {
-      "name": "idm.gnome.org: HTTP response",
+      "name": "idm.gnome.org",
       "type": "https",
       "target": "idm.gnome.org",
       "strict": "true",
@@ -153,7 +153,7 @@
       "expected_body": ".*Identity.*"
     },
     {
-      "name": "meet.gnome.org: HTTP response",
+      "name": "meet.gnome.org",
       "type": "https",
       "target": "meet.gnome.org",
       "strict": "true",
@@ -164,7 +164,7 @@
       "expected_body": ".*BigBlueButton.*"
     },
     {
-      "name": "nightly.gnome.org flat-manager: HTTP response",
+      "name": "nightly.gnome.org flat-manager",
       "type": "https",
       "target": "nightly.gnome.org/status",
       "strict": "true",
@@ -175,7 +175,7 @@
       "expected_body": ".*flat-manager version.*"
     },
     {
-      "name": "nightly.gnome.org: HTTP response",
+      "name": "nightly.gnome.org",
       "type": "https",
       "target": "nightly.gnome.org/gnome-nightly.flatpakrepo",
       "strict": "true",
@@ -186,7 +186,7 @@
       "expected_body": ".*Flatpak Repo.*"
     },
     {
-      "name": "shop.gnome.org: HTTP response",
+      "name": "shop.gnome.org",
       "type": "https",
       "target": "shop.gnome.org",
       "strict": "true",
@@ -197,7 +197,7 @@
       "expected_body": ".*Items.*"
     },
     {
-      "name": "odrs.gnome.org: HTTP response",
+      "name": "odrs.gnome.org",
       "type": "https",
       "target": "odrs.gnome.org",
       "strict": "true",
@@ -208,7 +208,7 @@
       "expected_body": ".*ODRS.*"
     },
     {
-      "name": "odrs.gnome.org: HTTP response",
+      "name": "odrs.apps.openshift.gnome.org",
       "type": "https",
       "target": "odrs.apps.openshift.gnome.org",
       "strict": "true",
