Don't log NetworkManager status checks

--- a/roles/rsyslog/templates/rsyslog.conf.j2
+++ b/roles/rsyslog/templates/rsyslog.conf.j2
@@ -143,6 +143,8 @@ local2.*                                        ?r_other_apps;TraditionalFormat
 #------------------------------------------------------------------------------#
 # remote local1                                                                #
 #------------------------------------------------------------------------------#
+if $programname == 'haproxy' and $msg contains '/check_network_status.txt' then ~
+
 local1.*                                        ?r_local1;TraditionalFormat
 
 #------------------------------------------------------------------------------#
