--- a/roles/base_network/templates/hosts.j2
+++ b/roles/base_network/templates/hosts.j2
@@ -11,5 +11,8 @@
     {% endfor %}
   {% endif %}
 {% elif datacenter == 'osuosl' %}
-  8.43.85.20 vpn.gnome.org
+8.43.85.20 vpn.gnome.org
+{% elif datacenter == 'osci' %}
+98.83.131.224 bastion02.gnome.org
+8.43.85.20 vpn.gnome.org
 {% endif %}
