Setup matches for both OSUOSL and OSCI now

--- a/roles/base_network/templates/hosts.j2
+++ b/roles/base_network/templates/hosts.j2
@@ -10,9 +10,7 @@
       {{ hostvars[host].ansible_eth1.ipv4.address if datacenter == 'ral3' else hostvars[host].ansible_eth0.ipv4.address }} {{ hostvars[host].ansible_fqdn }} {{ hostvars[host].ansible_hostname }}
     {% endfor %}
   {% endif %}
-{% elif datacenter == 'osuosl' %}
+{% elif datacenter in ['osuosl', 'osci'] %}
 8.43.85.20 vpn.gnome.org
-{% elif datacenter == 'osci' %}
 98.83.131.224 bastion02.gnome.org
-8.43.85.20 vpn.gnome.org
 {% endif %}
