--- a/roles/cachet/templates/cachet.conf.j2
+++ b/roles/cachet/templates/cachet.conf.j2
@@ -15,5 +15,5 @@ APP_TIMEZONE=UTC
 CACHET_PATH=/
 
 CACHET_DOMAIN={{ cachet_url }}
-CACHET_TITLE="GNOME Infrastructure Status"
+CACHET_TITLE=GNOME Infrastructure Status
 TRUSTED_PROXIES=127.0.0.1
