--- a/roles/gitlab-runner/templates/pydocuum.service.j2
+++ b/roles/gitlab-runner/templates/pydocuum.service.j2
@@ -2,19 +2,19 @@
 Description=pydocuum
 Wants=network-online.target
 After=network-online.target
-RequiresMountsFor=%t/containers
+RequiresMountsFor=/run/user/{{ podman_user.uid }}/containers
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 Restart=always
 TimeoutStopSec=70
-ExecStartPre=-rm -f %t/%n.ctr-id
+ExecStartPre=-rm -f /run/user/{{ podman_user.uid }}/%n.ctr-id
 ExecStart=/usr/bin/podman \
 	--url unix:/run/user/{{ podman_user.uid }}/podman/podman.sock \
 	container run \
 	--attach STDOUT \
 	--attach STDERR \
-	--cidfile=%t/%n.ctr-id \
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id \
 	--init \
 	--cgroups=no-conmon \
 	--rm \
@@ -27,11 +27,11 @@ ExecStart=/usr/bin/podman \
 	--label org.gnome.pydocuum.skip=True quay.io/gnome_infrastructure/pydocuum:latest
 ExecStop=/usr/bin/podman stop \
 	--ignore -t 10 \
-	--cidfile=%t/%n.ctr-id
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id
 ExecStopPost=/usr/bin/podman rm \
 	-f \
 	--ignore -t 10 \
-	--cidfile=%t/%n.ctr-id
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id
 NotifyAccess=all
 
 [Install]
