--- a/roles/gimp_mirrorbits/templates/mirrorbits.service.j2
+++ b/roles/gimp_mirrorbits/templates/mirrorbits.service.j2
@@ -20,7 +20,7 @@ ExecStart=/usr/bin/podman \
 	--sdnotify=conmon \
 	--replace \
 	--name mirrorbits \
-	-p 8080:8080 \
+	--pod mirrorbits \
 	--volume /home/podman/mirrorbits/mirrorbits.conf:/etc/mirrorbits.conf:Z \
 	--volume /home/podman/mirrorbits/GeoIP.conf:/etc/GeoIP.conf:Z \
 	--mount type=bind,source=/mnt/ftp,target=/srv/ftp \
