--- a/roles/gimp_mirrorbits/templates/nginx.conf.j2
+++ b/roles/gimp_mirrorbits/templates/nginx.conf.j2
@@ -28,7 +28,7 @@ http {
     }
 
     server {
-        listen 443 default_server;
+        listen 443 ssl default_server;
         server_name _;
 
         root /mnt/ftp;
@@ -51,7 +51,7 @@ http {
 
         location / {
             try_files $uri @index;
-            proxy_set_header X-Forwarded-For $http_x_forwarded_for;
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $http_x_forwarded_for;
             proxy_buffering off;
