root should be /mnt/ftp/pub

--- a/roles/gimp_mirrorbits/templates/nginx.conf.j2
+++ b/roles/gimp_mirrorbits/templates/nginx.conf.j2
@@ -31,7 +31,7 @@ http {
         listen 443 ssl default_server;
         server_name _;
 
-        root /mnt/ftp;
+        root /mnt/ftp/pub;
 
         ssl_certificate /etc/letsencrypt/live/download.gimp.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/download.gimp.org/privkey.pem;
