Apparently in some specific scenarios %t resolves to /run/user/0 for the podman user

--- a/roles/gimp_mirrorbits/templates/mirrorbits.service.j2
+++ b/roles/gimp_mirrorbits/templates/mirrorbits.service.j2
@@ -3,16 +3,16 @@ Description=Mirrorbits
 Documentation=man:podman-generate-systemd(1)
 Wants=network-online.target
 After=network-online.target redis.service
-RequiresMountsFor=%t/containers
+RequiresMountsFor=/run/user/{{ podman_user.uid }}/containers
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 Restart=always
 TimeoutStopSec=70
-ExecStartPre=-rm -f %t/%n.ctr-id
+ExecStartPre=-rm -f /run/user/{{ podman_user.uid }}/%n.ctr-id
 ExecStart=/usr/bin/podman \
 	--url unix:/run/user/{{ podman_user.uid }}/podman/podman.sock container run \
-	--cidfile=%t/%n.ctr-id \
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id \
 	--cgroups=no-conmon \
 	--rm \
 	--attach STDOUT \
@@ -28,11 +28,11 @@ ExecStart=/usr/bin/podman \
 	quay.io/gnome_infrastructure/mirrorbits_gimp:latest
 ExecStop=/usr/bin/podman stop \
 	--ignore -t 10 \
-	--cidfile=%t/%n.ctr-id
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id
 ExecStopPost=/usr/bin/podman rm \
 	-f \
 	--ignore -t 10 \
-	--cidfile=%t/%n.ctr-id
+	--cidfile=/run/user/{{ podman_user.uid }}/%n.ctr-id
 NotifyAccess=all
 
 [Install]
