Add temporary aliases for upcoming contract roles

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -75,6 +75,11 @@ accounts@gnome.org accounting@gnome.org
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
 
+# 2024 Contractor Positions
+flathub@gnome.org ramcq@gnome.org,allanday@gnome.org,bpiotrowski
+wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org
+developmentfund@gnome.org ramcq@gnome.org,allanday@gnome.org,jsparber@gnome.org
+
 # University Outreach (https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/254)
 universityoutreach@gnome.org kprogri@gnome.org, nkemregina@gnome.org
 
