--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -59,7 +59,7 @@ events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
-microblog@gnome.org info@gnome.org, rlittauer@gnome.org
+microblog@gnome.org info@gnome.org, rlittauer@gnome.org, bpiotrowski
 neil@gnome.org info@gnome.org
 neilm@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
