--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -309,7 +309,7 @@ gnomeasia@gnome.org kprogri@gnome.org
 conduct@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100
-coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org
+coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org, aarti@ramkrishna.me, christopherdavis@gnome.org
 
 # GUADEC shop, requested by Kristi Progri on 2020-05-08
 shop@gnome.org zana@gnome.org, kprogri@gnome.org
