Add new alias for GitLab account requests

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -20,6 +20,7 @@ sysadmin@gnome.org gitlab-servicedesk-forwarder@gnome.org
 wordpress@gnome.org noreply@gnome.org
 admin@gnome.org gnome-sysadmin@gnome.org
 emergency@gnome.org rt-emergency@gnome-sysadmins.pagerduty.com
+gitlab-account-request@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 news@gnome.org gnome-web-list@gnome.org
 membership@gnome.org membership-committee@gnome.org
