Restructure the virtual_alias_maps stanza, s/-/+ on the virtual alias

--- a/roles/postfix.server/templates/regexp/virtual-gitlab.gnome.org.j2
+++ b/roles/postfix.server/templates/regexp/virtual-gitlab.gnome.org.j2
@@ -1,3 +1,3 @@
-/^incoming-[a-fA-F0-9]{32}@gitlab\.gnome\.org$/ gitlab-incoming-email@staff-mail.gnome.org
+/^incoming+[a-fA-F0-9]{32}@gitlab\.gnome\.org$/ gitlab-incoming-email@staff-mail.gnome.org
 # https://gitlab.gnome.org/Infrastructure/GitLab/issues/319
 /^.+@gitlab\.gnome\.org$/ gitlab-servicedesk-email@staff-mail.gnome.org
