--- a/roles/gimp_mirrorbits/templates/nginx.conf.j2
+++ b/roles/gimp_mirrorbits/templates/nginx.conf.j2
@@ -24,7 +24,13 @@ http {
         listen 80 default_server;
         server_name _;
 
-        return 301 https://$host$request_uri;
+        location /.well-known/acme-challenge/ {
+            root /usr/share/nginx/html;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 
     server {
