Update soc-admins alias (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1930)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -291,7 +291,7 @@ outreachy-admins@gnome.org karen@sfconservancy.org, sarah@thesharps.us, marinaz@
 gnome-outreachy-admins@gnome.org marinaz@redhat.com, karen@sfconservancy.org, meg387@gmail.com
 
 ### SOC
-soc-admins@gnome.org teuf@gnome.org, kittykat3756@gmail.com, csoriano@gnome.org, felipeborges@gnome.org
+soc-admins@gnome.org felipeborges@gnome.org, kprogri@gnome.org, aryankaushik2023@gmail.com, sri@ramkrishna.me, aday@gnome.org, mclasen@redhat.com, pedro.saderazevedo@gmail.com, nkemregina@gnome.org, deepesha.3007@gmail.com
 
 ### Google Play Developer account - BZ #771981
 android@gnome.org ankitstarski@gmail.com, info@gnome.org
