Update coc@g.o alias (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1931)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -307,7 +307,7 @@ gnomeasia@gnome.org kprogri@gnome.org
 conduct@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1100
-coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org, aarti@ramkrishna.me, christopherdavis@gnome.org
+coc@gnome.org federico@gnome.org, zana@gnome.org, akuci@gnome.org, mdowney@gnome.org, christopherdavis@gnome.org, carlosg@gnome.org
 
 # GUADEC shop, requested by Kristi Progri on 2020-05-08
 shop@gnome.org zana@gnome.org, kprogri@gnome.org
@@ -323,7 +323,7 @@ gtk-social@gnome.org ebassi@gnome.org
 lorry-controller-gitlab-bot@gnome.org gnome-sysadmin@gnome.org
 
 # STF (requested by Sonny Piers)
-stf@gnome.org tbernard@gnome.org, thibaultamartin@gnome.org, rlittauer@gnome.org, adrianvovk@gmail.com 
+stf@gnome.org tbernard@gnome.org, thibaultamartin@gnome.org, rlittauer@gnome.org, adrianvovk@gmail.com
 
 # Spamtrap
 /^.*@cvs.gnome.org$/ spamtrap@gnome.org
