Add MacStadium alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -415,6 +415,5 @@ noreply@discourse.gnome.org discourse-incoming-email
 # https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/1598
 research@gnome.org interns.usabilitytest@gmail.com
 
-#######################
-## MANAGED BY PUPPET ##
-#######################
+# MacStadium GitLab runners
+macstadium@gnome.org sidtosh4@gmail.com dehesselle@web.de gnome-sysadmin@gnome.org
