Separate each alias with commas

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -416,4 +416,4 @@ noreply@discourse.gnome.org discourse-incoming-email
 research@gnome.org interns.usabilitytest@gmail.com
 
 # MacStadium GitLab runners
-macstadium@gnome.org sidtosh4@gmail.com dehesselle@web.de gnome-sysadmin@gnome.org
+macstadium@gnome.org sidtosh4@gmail.com, dehesselle@web.de, gnome-sysadmin@gnome.org
