Update TRUSTED_PROXIES to match podman's local subnet

--- a/roles/cachet/templates/cachet.conf.j2
+++ b/roles/cachet/templates/cachet.conf.j2
@@ -16,4 +16,4 @@ CACHET_PATH=/
 
 CACHET_DOMAIN={{ cachet_url }}
 CACHET_TITLE=GNOME Infrastructure Status
-TRUSTED_PROXIES=127.0.0.1
+TRUSTED_PROXIES=10.88.0.0/16
