Add steven@ alias

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -110,6 +110,7 @@ richard@gnome.org rlittauer
 rosanna@gnome.org zana
 schuirmann@gnome.org lschuirma@gnome.org
 seb128@gnome.org sbacher@gnome.org
+steven@gnome.org sdeobald
 ten@gnome.org ten@ximian.com
 terra@gnome.org mortenw@gnome.org
 thib@gnome.org thibaultamartin@gnome.org
