--- a/roles/gitlab-runner/templates/tmpfiles.conf.j2
+++ b/roles/gitlab-runner/templates/tmpfiles.conf.j2
@@ -1,9 +1,2 @@
-d /run/user/{{ podman_user.uid }} 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers/networks 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd 0700 podman podman -
-d /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd/resolve 0700 podman podman -
-L! /run/systemd/resolve/resolv.conf - - - - /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd/resolve/resolv.conf
-L! /run/systemd/resolve/stub-resolv.conf - - - - /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd/resolve/stub-resolv.conf
+L+ /run/systemd/resolve/resolv.conf - - - - /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd/resolve/resolv.conf
+L+ /run/systemd/resolve/stub-resolv.conf - - - - /run/user/{{ podman_user.uid }}/containers/networks/rootless-netns/run/systemd/resolve/stub-resolv.conf
