Point director@ to sdeobald

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -155,7 +155,7 @@ gnome-contribs@gnome.org joakim@helixcode.com, miguel@helixcode.com
 gnome-press-contact@gnome.org engagement-private@gnome.org
 gnome-press-team@gnome.org engagement-private@gnome.org
 
-director@gnome.org zana@gnome.org
+director@gnome.org sdeobald
 tutorials@gnome.org director@gnome.org
 executive@gnome.org director@gnome.org
 
