--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -55,7 +55,7 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
-info@gnome.org zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+info@gnome.org steven@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
 events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
