microblog@g.o alias update (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/2011)

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -60,7 +60,7 @@ events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
 licensing@gnome.org info@gnome.org
-microblog@gnome.org info@gnome.org, bpiotrowski, pietrodc@gnome.org
+microblog@gnome.org info@gnome.org, bpiotrowski, pietrodc@gnome.org, cassidyjames@gnome.org
 neil@gnome.org info@gnome.org
 neilm@gnome.org info@gnome.org
 pia-affiliate@gnome.org info@gnome.org
