GIMP/CoreTeam#5: updating email for very old-time GIMPer.

--- a/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gimp.org.j2
@@ -121,7 +121,7 @@ raph@gimp.org raph@acm.org
 meo@gimp.org meo@rru.com
 
 # Sven Riedel
-sr@gimp.org sr@nachtfrost.net
+sr@gimp.org svenriedel0@googlemail.com
 
 # Tor Lillqvist
 tml@gimp.org tml@iki.fi
