adding steven to wellbeing@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -78,7 +78,7 @@ hiring-committee@gnome.org edsearch-list@gnome.org
 
 # 2024 Contractor Positions
 flathub@gnome.org ramcq@gnome.org,allanday@gnome.org,bpiotrowski
-wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org
+wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org,steven@gnome.org
 developmentfund@gnome.org ramcq@gnome.org,allanday@gnome.org,jsparber@gnome.org
 
 # University Outreach (https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/254)
