--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -56,6 +56,7 @@ board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
 info@gnome.org steven@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+staff@gnome.org steven@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski
 events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
