Make the pydocuum containers storage directory customizable
Since we moved all our runners to use /home/podman, make sure
that is also reflected in pydocuum's mount point by setting it
to /home/podman/.local/share/containers.

--- a/roles/gitlab-runner/templates/pydocuum.service.j2
+++ b/roles/gitlab-runner/templates/pydocuum.service.j2
@@ -22,7 +22,7 @@ ExecStart=/usr/bin/podman \
 	--replace \
 	--name pydocuum \
 	--volume /run/user/{{ podman_user.uid }}/podman/podman.sock:/run/podman.sock:z \
-	--volume /var/lib/containers:/var/lib/containers:ro \
+	--volume {{ gitlab_runner_pydocuum_containers_storage | default('/home/podman/.local/share/containers') }}:/var/lib/containers:ro \
 	--label io.containers.autoupdate=image \
 	--label org.gnome.pydocuum.skip=True quay.io/gnome_infrastructure/pydocuum:latest
 ExecStop=/usr/bin/podman stop \
