add myself to accounting@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -71,7 +71,7 @@ video@gnome.org info@gnome.org
 
 # Accounting aliases
 bookkeeper@gnome.org rebecca.selin.services@gmail.com
-accounting@gnome.org zana@gnome.org,akuci@gnome.org
+accounting@gnome.org zana@gnome.org,akuci@gnome.org,steven@gnome.org
 accounts@gnome.org accounting@gnome.org
 
 # Hiring Committee
