New alias as per https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/2032

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -424,3 +424,6 @@ research@gnome.org interns.usabilitytest@gmail.com
 
 # MacStadium GitLab runners
 macstadium@gnome.org sidtosh4@gmail.com, dehesselle@web.de, gnome-sysadmin@gnome.org
+
+# Foundation Staff archive (https://gitlab.gnome.org/Infrastructure/Infrastructure/-/issues/2032)
+foundation-staff-archive@gnome.org foundation-staff-archive
