--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -55,8 +55,8 @@ gcalctool-list@gnome.org gnome-calculator-list@gnome.org
 board@gnome.org gitlab-servicedesk-forwarder@gnome.org
 
 # Staff and general info
-info@gnome.org steven@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
-staff@gnome.org steven@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski,foundation-staff-archive@gnome.org
+info@gnome.org director@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org
+staff@gnome.org director@gnome.org,zana@gnome.org,kprogri@gnome.org,akuci@gnome.org,bpiotrowski,foundation-staff-archive@gnome.org
 events@gnome.org info@gnome.org
 hmillion@gnome.org info@gnome.org
 instagram@gnome.org info@gnome.org
@@ -74,15 +74,15 @@ legal@gnome.org director@gnome.org, foundation-staff-archive@gnome.org
 
 # Accounting aliases
 bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
-accounting@gnome.org zana@gnome.org,akuci@gnome.org,steven@gnome.org, foundation-staff-archive@gnome.org
+accounting@gnome.org zana@gnome.org,akuci@gnome.org,director@gnome.org, foundation-staff-archive@gnome.org
 accounts@gnome.org accounting@gnome.org
 
 # Hiring Committee
 hiring-committee@gnome.org edsearch-list@gnome.org
 
 # 2024 Contractor Positions
-flathub@gnome.org ramcq@gnome.org,allanday@gnome.org,bpiotrowski,steven@gnome.org
-wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org,steven@gnome.org
+flathub@gnome.org ramcq@gnome.org,allanday@gnome.org,bpiotrowski,director@gnome.org
+wellbeing@gnome.org ramcq@gnome.org,allanday@gnome.org,pwithnall@gnome.org,director@gnome.org
 developmentfund@gnome.org ramcq@gnome.org,allanday@gnome.org,jsparber@gnome.org
 
 # University Outreach (https://gitlab.gnome.org/Infrastructure/Infrastructure/issues/254)
