Replace myself and Bart with Foundation's archive

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -89,9 +89,9 @@ developmentfund@gnome.org ramcq@gnome.org,allanday@gnome.org,jsparber@gnome.org
 universityoutreach@gnome.org kprogri@gnome.org, nkemregina@gnome.org
 
 # donate.gnome.org
-donate@gnome.org   director@gnome.org, bpiotrowski, av@gnome.org
-friends@gnome.org  director@gnome.org, bpiotrowski, av@gnome.org
-sponsors@gnome.org director@gnome.org, bpiotrowski, av@gnome.org
+donate@gnome.org   director@gnome.org,foundation-staff-archive@gnome.org
+friends@gnome.org  director@gnome.org,foundation-staff-archive@gnome.org
+sponsors@gnome.org director@gnome.org,foundation-staff-archive@gnome.org
 
 # old campaigns
 friends-eu@gnome.org director@gnome.org,zana@gnome.org,foundation-staff-archive@gnome.org
