New aliases, separate mailbox for financial transactions

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -90,7 +90,7 @@ universityoutreach@gnome.org kprogri@gnome.org, nkemregina@gnome.org
 
 # donate.gnome.org
 donate@gnome.org   director@gnome.org,foundation-staff-archive@gnome.org
-friends@gnome.org  director@gnome.org,foundation-staff-archive@gnome.org
+friends@gnome.org  director@gnome.org,financial-transactions-archive@gnome.org
 sponsors@gnome.org director@gnome.org,foundation-staff-archive@gnome.org
 
 # old campaigns
@@ -102,7 +102,7 @@ defendus@gnome.org zana@gnome.org,director@gnome.org,foundation-staff-archive@gn
 
 # Alias used for donations taken on behalf of the GIMP project
 # Rosanna Yuen, Michael Natterer, Michael Schumacher
-gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, director@gnome.org, foundation-staff-archive@gnome.org
+gimp@gnome.org mitch@gimp.org, zana@gnome.org, schumaml@gmx.de, director@gnome.org, financial-transactions-archive@gnome.org
 
 # Personal aliases.
 aday@gnome.org allanday@gnome.org
@@ -123,6 +123,8 @@ steven@gnome.org sdeobald
 ten@gnome.org ten@ximian.com
 terra@gnome.org mortenw@gnome.org
 thib@gnome.org thibaultamartin@gnome.org
+ss@gnome.org ssyal,foundation-staff-archive@gnome.org
+deepa@gnome.org dvenkatraman,foundation-staff-archive@gnome.org
 
 # Marketing aliases
 
