adding rob and allan to legal@

--- a/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
+++ b/roles/postfix.server/templates/postmap/virtual-gnome.org.j2
@@ -70,7 +70,7 @@ support@gnome.org info@gnome.org
 video@gnome.org info@gnome.org
 
 # Legal
-legal@gnome.org director@gnome.org, foundation-staff-archive@gnome.org
+legal@gnome.org director@gnome.org, aday@gnome.org, ramcq@gnome.org, foundation-staff-archive@gnome.org
 
 # Accounting aliases
 bookkeeper@gnome.org rebecca.selin.services@gmail.com, foundation-staff-archive@gnome.org
